# frustration-game

./: .gitignore  CMakeLists.txt
assets/: events.json  quests.json
cmake/: Dependencies.cmake
game/: CMakeLists.txt
game/include/game/: components.h  draw_raii.hpp  game.h  game_clock.h  game_loop.h  items.h  ivec.hpp  jolt_setup.h  seed_rng.h  systems.h  vec.hpp  window.h
game/src/: main.cpp
game/src/game/: game.cpp  game_clock.cpp  game_loop.cpp  seed_rng.cpp  systems.cpp  window.cpp
gamelib/: CMakeLists.txt
gamelib/include/gamelib/: events.h  quests.h
gamelib/include/gamelib/ecs/: component_pool.hpp  ecs.hpp  entity.hpp  system_scheduler.hpp  world.hpp
tests/: CMakeLists.txt
tests/src/: test_ecs.cpp  test_event_codec.cpp  test_quest_codec.cpp
